@@ -95,11 +95,11 @@ fi
 echo '
 #ifdef PATH_MAX
 # define SB_PATH_MAX PATH_MAX * 2
-# if (SB_PATH_MAX >= INT_MAX)
+# if (SB_PATH_MAX >= INT_MAX) || (SB_PATH_MAX < PATH_MAX)
 #  undef SB_PATH_MAX
 #  define SB_PATH_MAX PATH_MAX + 25
-#  if (SB_PATH_MAX >= INT_MAX)
-#   error PATH_MAX too big!
+#  if (SB_PATH_MAX >= INT_MAX) || (SB_PATH_MAX < PATH_MAX)
+#   error SB_PATH_MAX too big!
 #  endif
 # endif
 #else
